--- a/awards.html
+++ b/awards.html
@@ -1,144 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async
-	src="https://www.googletagmanager.com/gtag/js?id=UA-103030276-2"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() {
-		dataLayer.push(arguments);
-	}
-	gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-103030276-2"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
 
-	gtag('config', 'UA-103030276-2');
-</script>
+		gtag('config', 'UA-103030276-2');
 
-
-<title>Anderson Uchôa - Pontifical Catholic University of Rio de
-	Janeiro</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="author" content="Anderson Uchôa">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, maximum-scale=1">
-
-<meta name="description" content="Anderson Uchôa Academic Page" />
-<meta name="keywords"
-	content="faculty profile, anderson uchoa, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
-
-<link rel="shortcut icon" href="../favicon.ico">
-
-<!--CSS styles-->
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link rel="stylesheet" href="css/perfect-scrollbar-0.4.5.min.css">
-<link rel="stylesheet" href="css/magnific-popup.css">
-<link rel="stylesheet" href="css/style.css">
-<link id="theme-style" rel="stylesheet" href="css/styles/blue.css">
+	</script>
 
 
-<!--/CSS styles-->
-<!--Javascript files-->
-<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
-<script type="text/javascript" src="js/TweenMax.min.js"></script>
-<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
-<script type="text/javascript"
-	src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
+	<title>Anderson Uchôa - UFRJ and PUC-Rio</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="author" content="Anderson Uchôa">
+	<meta name="viewport"
+		  content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<script type="text/javascript" src="js/modernizr.custom.63321.js"></script>
-<script type="text/javascript" src="js/jquery.dropdownit.js"></script>
+	<meta name="description" content="Anderson Uchôa Academic Page" />
+	<meta name="keywords"
+		  content="faculty profile, anderson uchoa, anderson uchôa, ufrj, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
 
-<script type="text/javascript" src="js/jquery.stellar.min.js"></script>
-<script type="text/javascript" src="js/ScrollToPlugin.min.js"></script>
+	<link rel="shortcut icon" href="../favicon.ico">
 
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<!--CSS styles-->
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/perfect-scrollbar-0.4.5.min.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link id="theme-style" rel="stylesheet" href="css/styles/blue.css">
 
-<script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
 
-<script type="text/javascript" src="js/masonry.min.js"></script>
+	<!--/CSS styles-->
+	<!--Javascript files-->
+	<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
+	<script type="text/javascript" src="js/TweenMax.min.js"></script>
+	<script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+	<script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
 
-<script type="text/javascript"
-	src="js/perfect-scrollbar-0.4.5.with-mousewheel.min.js"></script>
+	<script type="text/javascript" src="js/modernizr.custom.63321.js"></script>
+	<script type="text/javascript" src="js/jquery.dropdownit.js"></script>
 
-<script type="text/javascript" src="js/magnific-popup.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
+	<script type="text/javascript" src="js/jquery.stellar.min.js"></script>
+	<script type="text/javascript" src="js/ScrollToPlugin.min.js"></script>
 
-<!--/Javascript files-->
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+	<script type="text/javascript" src="js/jquery.mixitup.min.js"></script>
+
+	<script type="text/javascript" src="js/masonry.min.js"></script>
+
+	<script type="text/javascript"
+			src="js/perfect-scrollbar-0.4.5.with-mousewheel.min.js"></script>
+
+	<script type="text/javascript" src="js/magnific-popup.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
+
+	<!--/Javascript files-->
 
 </head>
 <body>
 
-	<div id="wrapper">
-		<a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
-		<div id="sidebar">
-			<div id="main-nav">
-				<div id="nav-container">
-					<div id="profile" class="clearfix">
-						<a href="http://www.inf.puc-rio.br/" target="_new"><img
-								alt="image" width="230" src="img/logo_di.png"></a>
-						<br>
-						<!--						<br>-->
-						<!--						<a href="https://dcc.ufrj.br/" target="_new"><img-->
-						<!--								alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>-->
-						<!--						<br>-->
-						<!--						<br>-->
-						<div class="portrate hidden-xs"></div>
-						<div class="title">
-							<h2>Anderson Uchôa</h2>
-							<h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
+<div id="wrapper">
+	<a href="#sidebar" class="mobilemenu"><i class="icon-reorder"></i></a>
+	<div id="sidebar">
+		<div id="main-nav">
+			<div id="nav-container">
+				<div id="profile" class="clearfix">
+					<a href="http://www.inf.puc-rio.br/" target="_new"><img
+							alt="image" width="230" src="img/logo_di.png"></a>
+					<br>
 
-							<!--							<h3>PUC-Rio & UFRJ </h3>-->
-
-						</div>
+					<a href="https://dcc.ufrj.br/" target="_new"><img
+							alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
+					<br>
+					<div class="portrate hidden-xs"></div>
+					<div class="title">
+						<h2>Anderson Uchôa</h2>
 					</div>
-					<ul id="navigation">
-						<li class="currentmenu"><a href="index.html">
+				</div>
+				<ul id="navigation">
+					<li class="currentmenu">
+						<a href="index.html">
 							<div class="icon icon-user"></div>
 							<div class="text">About Me</div>
-						</a></li>
+						</a>
+					</li>
+					</li>
 
-						<li><a href="publication.html">
-							<div class="icon icon-edit"></div>
-							<div class="text">Publications</div>
-						</a></li>
+					<li><a href="publication.html">
+						<div class="icon icon-edit"></div>
+						<div class="text">Publications</div>
+					</a></li>
 
-						<li><a href="awards.html">
-							<div class="icon icon-star"></div>
-							<div class="text">Awards</div>
-						</a></li>
+					<li><a href="awards.html">
+						<div class="icon icon-star"></div>
+						<div class="text">Awards</div>
+					</a></li>
 
-						<li><a href="research.html">
-							<div class="icon icon-book"></div>
-							<div class="text">Research Experience</div>
-						</a></li>
+					<li><a href="research.html">
+						<div class="icon icon-book"></div>
+						<div class="text">Research Experiences</div>
+					</a></li>
 
-						<!--						<li><a href="teaching.html">-->
-						<!--							<div class="icon icon-time"></div>-->
-						<!--							<div class="text">Teaching</div>-->
-						<!--						</a></li>-->
+					<!--						<li><a href="industrial.html">-->
+					<!--							<div class="icon icon-book"></div>-->
+					<!--							<div class="text">Industrial Experiences</div>-->
+					<!--						</a></li>-->
 
+					<li><a href="teaching.html">
+						<div class="icon icon-time"></div>
+						<div class="text">Teaching</div>
+					</a></li>
 
-						<li><a href="http://lattes.cnpq.br/3740664626762609"
-							   target="_new">
-							<div class="icon icon-download-alt"></div>
-							<div class="text">CV Lattes (in Portuguese)</div>
-						</a></li>
+					<li><a href="services.html">
+						<div class="icon icon-thumbs-up"></div>
+						<div class="text">Services</div>
+					</a></li>
 
-					</ul>
-				</div>
-			</div>
+					<li><a href="http://lattes.cnpq.br/3740664626762609"
+						   target="_new">
+						<div class="icon icon-download-alt"></div>
+						<div class="text">CV Lattes (in Portuguese)</div>
+					</a></li>
 
-			<div class="social-icons">
-				<ul>
-					<li><a href="https://www.facebook.com/anderson.goncalvesuchoa"
-						   target="_new"><i class="icon-facebook"></i></a></li>
-					<li><a href="https://twitter.com/andersonguchoa" target="_new"><i
-							class="icon-twitter"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/andersongnuchoa/"
-						   target="_new"><i class="icon-linkedin"></i></a></li>
 				</ul>
 			</div>
 		</div>
+
+		<div class="social-icons">
+			<ul>
+				<li><a href="https://www.facebook.com/anderson.goncalvesuchoa"
+					   target="_new"><i class="icon-facebook"></i></a></li>
+				<li><a href="https://twitter.com/andersonguchoa" target="_new"><i
+						class="icon-twitter"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/andersongnuchoa/"
+					   target="_new"><i class="icon-linkedin"></i></a></li>
+			</ul>
+		</div>
+	</div>
 
 		<div id="main">
 
@@ -146,18 +152,42 @@
 				<div class="pageheader">
 					<div class="headercontent">
 						<div class="section-container">
-
+							<h2 class="title">  Honors, Awards and Grants</h2>
 							<div class="row">
-
-								<div class="clearfix visible-sm visible-xs"></div>
-								<div class="col-md-10 col-md-offset-1">
-									<h3 class="title">Honors, Awards and Grants</h3>
+								<div class="col-md-12">
 									<p>
 										A selection of honors and awards follows. Click on each award title to see a summary.
 
 									</p>
-									<ul class="timeline">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+<!--				<div class="pageheader">-->
+<!--					<div class="headercontent">-->
+<!--						<div class="section-container">-->
 
+<!--							<div class="row">-->
+
+<!--								<div class="clearfix visible-sm visible-xs"></div>-->
+<!--								<div class="col-md-10 col-md-offset-1">-->
+<!--									<h3 class="title"> Honors, Awards and Grants</h3>-->
+<!--									<p>-->
+<!--										A selection of honors and awards follows. Click on each award title to see a summary.-->
+
+<!--									</p>-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+
+
+				<div class="pagecontents">
+					<div class="section color-1" >
+						<div class="section-container">
+								<ul class="timeline">
 										<li class="open">
 											<div class="date">Student Volunteer'20</div>
 											<div class="circle"></div>
@@ -169,7 +199,7 @@
 															 src="img/personal/icse-2020.png">
 													</div>
 
-													<div class="col-md-10">I received a grand to be part
+													<div class="col-md-10" style="text-align:justify">I received a grand to be part
 														of the student volunteers who have been selected to
 														support the International Conference on Software
 														Engineering (ICSE 2020) - Virtual Format.</div>
@@ -189,7 +219,7 @@
 															 src="img/personal/icsa-2020.png">
 													</div>
 
-													<div class="col-md-10">I received a grand to be part
+													<div class="col-md-10" style="text-align:justify">I received a grand to be part
 														of the student volunteers who have been selected to
 														support the premier International Conference on Software
 														Architecture (ICSA 2020) at Salvador, Bahia, Brazil.</div>
@@ -209,7 +239,7 @@
 															 src="img/personal/acm-sigsoft.jpg">
 													</div>
 
-													<div class="col-md-10">I received a SIGSOFT CAPS
+													<div class="col-md-10" style="text-align:justify">I received a SIGSOFT CAPS
 														Travel Grand Award from Association for Computing
 														Machinery (ACM) to attend ICSE 2019.</div>
 												</div>
@@ -228,7 +258,7 @@
 															 src="img/personal/cnpq.png">
 													</div>
 
-													<div class="col-md-10">I received a scholarship from
+													<div class="col-md-10" style="text-align:justify">I received a scholarship from
 														National Council for Scientific and Technological
 														Development (CNPq) to support my PhD research.</div>
 												</div>
@@ -248,7 +278,7 @@
 															 src="img/personal/icse-2018.png">
 													</div>
 
-													<div class="col-md-10">I received a grand to be part
+													<div class="col-md-10" style="text-align:justify">I received a grand to be part
 														of the student volunteers who have been selected to
 														support the International Conference on Software
 														Engineering (ICSE 2018) at Gothenburg, Sweden.</div>
@@ -269,7 +299,7 @@
 															 src="img/personal/capes.jpg">
 													</div>
 
-													<div class="col-md-10">I received a scholarship from
+													<div class="col-md-10" style="text-align:justify">I received a scholarship from
 														Brazilian Federal Agency for Postgraduate Education
 														(CAPES) to support my M.Sc. research.</div>
 												</div>
@@ -288,7 +318,7 @@
 															 src="img/personal/elaes-2016.jpg">
 													</div>
 
-													<div class="col-md-10">Award received in Natal,
+													<div class="col-md-10" style="text-align:justify">Award received in Natal,
 														Brazil during the 3rd Latin-American School on Software
 														Engineering (ELA-ES) in 2016.</div>
 												</div>
@@ -309,26 +339,20 @@
 															 src="img/personal/capes.jpg">
 													</div>
 
-													<div class="col-md-10">I received a scholarship from
+													<div class="col-md-10" style="text-align:justify">I received a scholarship from
 														Brazilian Federal Agency for Postgraduate Education
 														(CAPES) to support my B.Sc academic exchange.</div>
 												</div>
 											</div>
 										</li>
 									</ul>
-
-								</div>
-
-							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-
-
-
 		</div>
+
 	</div>
+
 </body>
 </html>
