--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 </script>
 
 
-<title>Anderson Uchôa - Pontifical Catholic University of Rio de
-	Janeiro</title>
+<title>Anderson Uchôa - UFRJ and PUC-Rio</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="author" content="Anderson Uchôa">
 <meta name="viewport"
@@ -25,7 +24,7 @@
 
 <meta name="description" content="Anderson Uchôa Academic Page" />
 <meta name="keywords"
-	content="faculty profile, anderson uchoa, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
+	content="faculty profile, anderson uchoa, anderson uchôa, ufrj, puc-rio, puc, pontifical catholic university, pontifical catholic university of rio de janeiro, software engineering, empirical software engineering, applied software engineering" />
 
 <link rel="shortcut icon" href="../favicon.ico">
 
@@ -77,25 +76,23 @@
 						<a href="http://www.inf.puc-rio.br/" target="_new"><img
 							alt="image" width="230" src="img/logo_di.png"></a>
 						<br>
-<!--						<br>-->
-<!--						<a href="https://dcc.ufrj.br/" target="_new"><img-->
-<!--								alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>-->
-<!--						<br>-->
-<!--						<br>-->
+
+						<a href="https://dcc.ufrj.br/" target="_new"><img
+								alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
+						<br>
 						<div class="portrate hidden-xs"></div>
 						<div class="title">
 							<h2>Anderson Uchôa</h2>
-							<h3>Pontifical Catholic University of Rio de Janeiro (PUC-Rio)</h3>
-
-<!--							<h3>PUC-Rio & UFRJ </h3>-->
-
 						</div>
 					</div>
 					<ul id="navigation">
-						<li class="currentmenu"><a href="index.html">
+						<li class="currentmenu">
+							<a href="index.html">
 								<div class="icon icon-user"></div>
 								<div class="text">About Me</div>
-						</a></li>
+							</a>
+						</li>
+						</li>
 
 						<li><a href="publication.html">
 							<div class="icon icon-edit"></div>
@@ -109,14 +106,23 @@
 
 						<li><a href="research.html">
 								<div class="icon icon-book"></div>
-								<div class="text">Research Experience</div>
+								<div class="text">Research Experiences</div>
 						</a></li>
 
-<!--						<li><a href="teaching.html">-->
-<!--							<div class="icon icon-time"></div>-->
-<!--							<div class="text">Teaching</div>-->
+<!--						<li><a href="industrial.html">-->
+<!--							<div class="icon icon-book"></div>-->
+<!--							<div class="text">Industrial Experiences</div>-->
 <!--						</a></li>-->
 
+						<li><a href="teaching.html">
+							<div class="icon icon-time"></div>
+							<div class="text">Teaching</div>
+						</a></li>
+
+						<li><a href="services.html">
+							<div class="icon icon-thumbs-up"></div>
+							<div class="text">Services</div>
+						</a></li>
 
 						<li><a href="http://lattes.cnpq.br/3740664626762609"
 							target="_new">
@@ -153,14 +159,12 @@
 								<div class="col-md-12">
 									<h3 class="title">Recent News</h3>
 									<p>
-
 									<div class="alert alert-danger" role="alert">
-									I'll join the Department of Computer Science (DCC) at the Federal University of Rio de Janeiro (UFRJ) as Substitute Professor in 2021.</div>
-
-									<div class="alert alert-danger" role="alert">
-										I'll present my PhD Thesis Proposal entitled Unveiling Multiple Facets of Design Degradation in Modern Code Review at the 29th ESEC/FSE 2021</div>
+										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+										I'll present my PhD Proposal "Unveiling Multiple Facets of Design Degradation in Modern Code Review" at the 29th ESEC/FSE 2021</div>
 								</div>
-
 							</div>
 
 
@@ -168,21 +172,17 @@
 
 								<div class="clearfix visible-sm visible-xs"></div>
 								<div class="col-md-12">
-									<h3 class="title">Short Bio</h3>
-									<p>
 
-										Anderson Uchôa is a third-year PhD student the <a
+									<h3 class="title">Short Bio & Position</h3>
+									<p style="text-align:justify">
+
+										Anderson Uchôa is a Substitute Professor of the <a href="https://dcc.ufrj.br/" target="_new">Department of Computer Science</a> at Federal University of Rio de Janeiro <a href="https://ufrj.br/en/" target="_new">(UFRJ)</a> . Anderson is also a third-year PhD student in Software Engineering of the <a
 											href="http://www.inf.puc-rio.br" target="_new">Department
-										of Informatics</a> at Pontifical Catholic University of Rio de
+											of Informatics</a> at Pontifical Catholic University of Rio de
 										Janeiro <a href="https://www.puc-rio.br" target="_new">
-										(PUC-Rio)</a>. The postgraduate program of the Department of
-										Informatics is evaluated by the Brazilian Federal Agency for
-										Postgraduate Education (CAPES) as being of international
-										excellence (maximum score, 7).
-									</p>
-
-									<p>
-										He holds a Master's in Software Engineering from PUC-Rio (2019).
+											(PUC-Rio)</a> under the supervision
+										of Prof. <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
+													target="_new">Dr. Alessandro Garcia</a>. He holds a Master's in Software Engineering from PUC-Rio (2019).
 										Anderson holds a Bachelor's degree in Software Engineering
 										from the Federal University of Ceará <a
 											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in
@@ -191,7 +191,9 @@
 										Sapienza)</a>, Italy (2016).
 									</p>
 
-									<p>He has worked for research projects in software
+
+									<p style="text-align:justify">
+										He has worked for research projects in software
 										engineering, information systems for healthcare, and data
 										science. He also works in industrial projects at PUC-Rio.
 										Relevant venues and journals have accepted his work for
@@ -199,56 +201,11 @@
 										with various researchers in Brazil (more recently, UFAL, UFPE, UFPR,
 										and UFC) and UK (Newcastle University and University College London). He has received the
 										best paper award from the 3rd Latin-American School on
-										Software Engineering (ELA-ES 2016).</p>
-
-									<p>
-
-										He is a research scholar in software engineering for <a
-											href="https://opus.les.inf.puc-rio.br/wordpress/">OPUS
-										Research Group </a> at PUC-Rio since 2017 under the supervision
-										of Prof. <a href="https://www-di.inf.puc-rio.br/~afgarcia//"
-													target="_new">Dr. Alessandro Garcia</a> which is part of the
-										Software Engineering Laboratory of PUC-Rio. His main research
+										Software Engineering (ELA-ES 2016). His main research
 										interests are code review, software reuse, software evolution,
 										software maintenance, and human factors. His researches are
 										available in <a href="publication.html">publications</a>.
 									</p>
-
-									<!--									<h3 class="title">Short Bio</h3>-->
-<!--									<p>-->
-
-<!--										Anderson Uchôa is a Substitute Professor of the <a href="https://dcc.ufrj.br/" target="_new">Department of Computer Science</a>  at Federal University of Rio de Janeiro <a href="https://ufrj.br/en/" target="_new">(UFRJ)</a> . Anderson is also a third-year PhD student in Software Engineering of the <a-->
-<!--											href="http://www.inf.puc-rio.br" target="_new">Department-->
-<!--											of Informatics</a> at Pontifical Catholic University of Rio de-->
-<!--										Janeiro <a href="https://www.puc-rio.br" target="_new">-->
-<!--											(PUC-Rio)</a>. He holds a Master's in Software Engineering from PUC-Rio (2019).-->
-<!--										Anderson holds a Bachelor's degree in Software Engineering-->
-<!--										from the Federal University of Ceará <a-->
-<!--											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in-->
-<!--										cooperation with Sapienza University of Rome <a-->
-<!--											href="https://www.di.uniroma1.it/" target="_new"> (La-->
-<!--										Sapienza)</a>, Italy (2016).-->
-<!--									</p>-->
-
-<!--&lt;!&ndash;									<p>&ndash;&gt;-->
-<!--&lt;!&ndash;										He holds a Master's in Software Engineering from PUC-Rio (2019).&ndash;&gt;-->
-<!--&lt;!&ndash;										Anderson holds a Bachelor's degree in Software Engineering&ndash;&gt;-->
-<!--&lt;!&ndash;										from the Federal University of Ceará <a&ndash;&gt;-->
-<!--&lt;!&ndash;											href="http://www.ufc.br/" target="_new">(UFC)</a>, Brazil, in&ndash;&gt;-->
-<!--&lt;!&ndash;										cooperation with Sapienza University of Rome <a&ndash;&gt;-->
-<!--&lt;!&ndash;											href="https://www.di.uniroma1.it/" target="_new"> (La&ndash;&gt;-->
-<!--&lt;!&ndash;											Sapienza)</a>, Italy (2016).&ndash;&gt;-->
-<!--&lt;!&ndash;									</p>&ndash;&gt;-->
-
-<!--									<p>He has worked for research projects in software-->
-<!--										engineering, information systems for healthcare, and data-->
-<!--										science. He also works in industrial projects at PUC-Rio.-->
-<!--										Relevant venues and journals have accepted his work for-->
-<!--										publication, such as the International Conference on Software Maintenance and Evolution (ICSME), International Conference on Software Engineering (ICSE), and International Conference on Mining Software Repositories (MSR). Anderson collaborates-->
-<!--										with various researchers in Brazil (more recently, UFAL, UFPE, UFPR,-->
-<!--										and UFC) and UK (Newcastle University and University College London). He has received the-->
-<!--										best paper award from the 3rd Latin-American School on-->
-<!--										Software Engineering (ELA-ES 2016).</p>-->
 
 <!--									<p>-->
 
@@ -304,20 +261,20 @@
 											</div>
 										</li>
 									</ul>
-<!--									<ul class="ul-dates">-->
-<!--										<li>-->
-<!--											<div class="dates">-->
-<!--												<span>Present</span> <span>2022</span>-->
-<!--											</div>-->
-<!--											<div class="content">-->
-<!--												<h4>Substitute Professor in Computer Science</h4>-->
-<!--												<p>-->
-<!--													<em>Federal University of Rio de Janeiro-->
-<!--														(UFRJ)</em>, Department of Computer Science-->
-<!--												</p>-->
-<!--											</div>-->
-<!--										</li>-->
-<!--									</ul>-->
+									<ul class="ul-dates">
+										<li>
+											<div class="dates">
+												<span>Present</span> <span>2022</span>
+											</div>
+											<div class="content">
+												<h4>Substitute Professor in Computer Science</h4>
+												<p>
+													<em>Federal University of Rio de Janeiro
+														(UFRJ)</em>, Department of Computer Science
+												</p>
+											</div>
+										</li>
+									</ul>
 
 
 								</div>
