--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<a href="https://dcc.ufrj.br/" target="_new"><img
 								alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
 						<br>
-						<div class="portrate hidden-xs"></div>
+						<div class="portrate"></div>
 						<div class="title">
 							<h2>Anderson Uchôa</h2>
 						</div>
