--- a/publication.html
+++ b/publication.html
@@ -80,13 +80,13 @@
                     <a href="https://dcc.ufrj.br/" target="_new"><img
                             alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
                     <br>
-                    <div class="portrate hidden-xs"></div>
+                    <div class="portrate"></div>
                     <div class="title">
                         <h2>Anderson Uchôa</h2>
                     </div>
                 </div>
                 <ul id="navigation">
-                    <li class="currentmenu">
+                    <li>
                         <a href="index.html">
                             <div class="icon icon-user"></div>
                             <div class="text">About Me</div>
@@ -94,7 +94,7 @@
                     </li>
                     </li>
 
-                    <li><a href="publication.html">
+                    <li class="currentmenu"><a href="publication.html">
                         <div class="icon icon-edit"></div>
                         <div class="text">Publications</div>
                     </a></li>
