--- a/services.html
+++ b/services.html
@@ -80,13 +80,13 @@
 					<a href="https://dcc.ufrj.br/" target="_new"><img
 							alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
 					<br>
-					<div class="portrate hidden-xs"></div>
+					<div class="portrate"></div>
 					<div class="title">
 						<h2>Anderson Uchôa</h2>
 					</div>
 				</div>
 				<ul id="navigation">
-					<li class="currentmenu">
+					<li>
 						<a href="index.html">
 							<div class="icon icon-user"></div>
 							<div class="text">About Me</div>
@@ -119,7 +119,7 @@
 						<div class="text">Teaching</div>
 					</a></li>
 
-					<li><a href="services.html">
+					<li class="currentmenu"><a href="services.html">
 						<div class="icon icon-thumbs-up"></div>
 						<div class="text">Services</div>
 					</a></li>
