--- a/teaching.html
+++ b/teaching.html
@@ -80,13 +80,13 @@
 					<a href="https://dcc.ufrj.br/" target="_new"><img
 							alt="image" width="230" src="img/logo_dcc_ufrj.png"></a>
 					<br>
-					<div class="portrate hidden-xs"></div>
+					<div class="portrate"></div>
 					<div class="title">
 						<h2>Anderson Uchôa</h2>
 					</div>
 				</div>
 				<ul id="navigation">
-					<li class="currentmenu">
+					<li>
 						<a href="index.html">
 							<div class="icon icon-user"></div>
 							<div class="text">About Me</div>
@@ -114,7 +114,7 @@
 					<!--							<div class="text">Industrial Experiences</div>-->
 					<!--						</a></li>-->
 
-					<li><a href="teaching.html">
+					<li class="currentmenu"><a href="teaching.html">
 						<div class="icon icon-time"></div>
 						<div class="text">Teaching</div>
 					</a></li>
