--- a/index.html
+++ b/index.html
@@ -156,21 +156,6 @@
 
 								<div class="clearfix visible-sm visible-xs"></div>
 								<div class="col-md-12">
-									<h3 class="title">Recent News</h3>
-									<p>
-									<div class="alert alert-danger" role="alert">
-										<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-											<span aria-hidden="true">&times;</span>
-										</button>
-										I'll present my PhD Proposal "Unveiling Multiple Facets of Design Degradation in Modern Code Review" at the 29th ESEC/FSE 2021</div>
-								</div>
-							</div>
-
-
-							<div class="row">
-
-								<div class="clearfix visible-sm visible-xs"></div>
-								<div class="col-md-12">
 
 									<h3 class="title">Short Bio & Position</h3>
 									<p style="text-align:justify">
@@ -242,7 +227,7 @@
 					<div class="section color-1">
 						<div class="section-container">
 							<div class="row">
-								<div class="col-md-5 col-md-offset-1">
+								<div class="col-md-5">
 									<div class="title text-center">
 										<h3>Academic Positions</h3>
 									</div>
@@ -252,6 +237,8 @@
 												<span>Present</span> <span>2022</span>
 											</div>
 											<div class="content">
+												<img alt="image" src="img/logo_puc_rio.gif" width="45em" height="auto" align="right" class="img-responsive">
+
 												<h4>PhD Student in Software Engineering</h4>
 												<p>
 													<em>Pontifical Catholic University of Rio de Janeiro
@@ -266,6 +253,8 @@
 												<span>Present</span> <span>2022</span>
 											</div>
 											<div class="content">
+												<img alt="image" src="img/logo_ufrj.png" width="70em" height="auto" align="right" class="img-responsive">
+
 												<h4>Substitute Professor in Computer Science</h4>
 												<p>
 													<em>Federal University of Rio de Janeiro
@@ -277,7 +266,7 @@
 
 
 								</div>
-								<div class="col-md-5">
+								<div class="col-md-5  col-md-offset-1">
 									<div class="title text-center">
 										<h3>Academic Education</h3>
 									</div>
@@ -288,6 +277,7 @@
 												<span class="degree">PhD</span> <span class="year">Present</span>
 											</div>
 											<div class="description">
+												<img alt="image" src="img/logo_puc_rio.gif" width="45em" height="auto" align="right" class="img-responsive">
 												<p class="what">PhD in Software Engineering, PUC-Rio</p>
 												<p class="where">Grade Point Average (GPA): 9.7/10.</p>
 												<p class="where">
@@ -302,6 +292,8 @@
 												<span class="degree">MSc</span> <span class="year">2019</span>
 											</div>
 											<div class="description">
+												<img alt="image" src="img/logo_puc_rio.gif" width="45em" height="auto" align="right" class="img-responsive">
+
 												<p class="what">MSc in Software Engineering, PUC-Rio</p>
 												<p class="where">Grade Point Average (GPA): 9/10.</p>
 												<p class="where">
@@ -315,6 +307,7 @@
 												<span class="degree">BSc</span><span class="year">2016</span>
 											</div>
 											<div class="description">
+												<img alt="image" src="img/logo_ufc.png" width="45em" height="auto" align="right" class="img-responsive">
 												<p class="what">BSc in Software Engineering</p>
 												<p class="where">Federal University of Ceará (UFC) in
 													cooperation with the Sapienza University of Rome
