--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 												<h4>PhD Student in Software Engineering</h4>
 												<p>
 													<em>Pontifical Catholic University of Rio de Janeiro
-														(PUC-Rio)</em>, Department of Informatics
+														(PUC-Rio)</em>, Informatics Department
 												</p>
 											</div>
 										</li>
@@ -254,16 +254,14 @@
 											</div>
 											<div class="content">
 												<img alt="image" src="img/logo_ufrj.png" width="70em" height="auto" align="right" class="img-responsive">
-
 												<h4>Substitute Professor in Computer Science</h4>
 												<p>
 													<em>Federal University of Rio de Janeiro
-														(UFRJ)</em>, Department of Computer Science
+														(UFRJ)</em>, Computer Science Department
 												</p>
 											</div>
 										</li>
 									</ul>
-
 
 								</div>
 								<div class="col-md-5  col-md-offset-1">
@@ -319,8 +317,6 @@
 												</p>
 											</div>
 										</li>
-
-
 
 									</ul>
 								</div>
