--- a/publication.html
+++ b/publication.html
@@ -151,7 +151,12 @@
                     <div class="pageheader">
                         <div class="headercontent">
                             <div class="section-container">
-                                <h2 class="title"> Publications</h2>
+                                <h2 class="title"> Publications
+
+                                    <a href="#" data-toggle="tooltip" data-placement="right"  title="&copy;Copyright Notice: This material is presented to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's copyright. These works may not be reposted without the explicit permission of the copyright holder. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's copyright and/or copyright holders. All statements of fact, opinion or conclusions contained herein are those of the authors and should not be construed as representing the official views or policies of the sponsors. In most cases, these works may not be reposted without the explicit permission of the copyright holders. Please contact authors for further details">
+                                        <div class="icon icon-comment"></div>
+                                    </a>
+                                </h2>
                                     <div class="row">
                                         <div class="col-md-12">
                                             <p style="text-align:justify">A complete list of my publications with abstracts, doi link to publisher (when available), and author version eprints can be found below. You may also want to check out my profile at <a href="https://www.researchgate.net/profile/Anderson_Uchoa" target="_new">Research Gate</a>, <a href="https://scholar.google.com.br/citations?user=_bwg28kAAAAJ&hl=en" target="_new">Google Scholar</a>, <a href="https://dblp.uni-trier.de/search/publ?q=author:Anderson_G._Uch%C3%B4a:" target="_new">DBLP</a>, and <a href="https://lattes.cnpq.br/3740664626762609" target="_new">Lattes (in Portuguese)</a>. Feel free to contact me if you want to further discuss the ideas of any of the papers.</p>
@@ -164,6 +169,7 @@
                     <div class="pagecontents">
                         <div class="section color-1">
                             <div class="section-container">
+
                                 <div>
                                     <script src="https://bibbase.org/show?bib=https%3A%2F%2Fanderson-uchoa.github.io%2Fpublications%2FUchoaPapers.bib&jsonp=1"></script>
                                 </div>
